<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:padding="16dp">

 <ImageView
     android:id="@+id/icon_drag_handle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:src="@drawable/ic_drag_handle" />

 <TextView
     android:id="@+id/title_bsh"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
     android:textSize="19sp"
     android:layout_gravity="center_horizontal"
     android:gravity="center_horizontal"
     android:fontFamily="@font/roboto_medium"
     android:text="@string/text_filter" />

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_marginTop="16dp">


 </LinearLayout>

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/til_search_name_habit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:hint="@string/text_search_name_habit"
      app:endIconCheckable="true"
      app:endIconDrawable="@drawable/ic_clear"
      app:endIconMode="clear_text">

   <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/filterNameHabit"
       style="@style/TextInputEditText"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/til_search_desc_habit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:hint="@string/text_search_desc_habit"
      app:endIconCheckable="true"
      app:endIconDrawable="@drawable/ic_clear"
      app:endIconMode="clear_text">

   <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/ti_et_search_desc_habit"
       style="@style/TextInputEditText"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />
  </com.google.android.material.textfield.TextInputLayout>
 </LinearLayout>
</LinearLayout>